added more info to sidebar

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 			   		<li><code>n</code>change the task name</li>
 			   		<li><code>s</code>change the task size</li>
 			   		<li><code>c</code>change the completionrate</li>
+			   		<li><code>ins</code>add a neighbour task</li>
+			   		<li><code>shift+ins</code>add a cild task</li>
+			   		<li><code>Delete</code>delete current task</li>
 		        </ul>
 				<H1>While changeing variables</H1>
 				<ul>
