--- a/index.html
+++ b/index.html
@@ -39,7 +39,40 @@
 
     </header>
     <div id="main" role="main">
-		<SECTION id="sideBar">
+	<canvas id="canvas">Your browser sucks, please install a better one like chrome, safari, opra, ....</canvas>
+	<section id="taskList">
+		<ul>
+		        <li>
+		                <ul>
+		                        <li>task</li>
+		                        <li>task</li>
+		                        <li>task</li>
+		                </ul>
+		        </li>
+		        <li>
+		                <ul>
+		                        <li>task</li>
+		                        <li>task</li>
+		                        <li>task</li>
+		                </ul>
+		        </li>
+		        <li>
+		                <ul>
+		                        <li>task</li>
+		                        <li>task</li>
+		                        <li>task</li>
+		                </ul>
+		        </li>
+		        <li>
+		                <ul>
+		                        <li>task</li>
+		                        <li>task</li>
+		                        <li>task</li>
+		                </ul>
+		        </li>
+		</ul>
+	</section>
+	<section id="sideBar">
 			
 			<section id="nameContainer">
 						<input type="text" name="n"		id="n"		 class="n" value="Loading..">
@@ -86,8 +119,7 @@
 			        <li> <code>Esc</code>Return to taskSpot</li>
 				</ul>
 		</section>
-		</SECTION>
-		<canvas id="canvas">Your browser sucks, please install a better one like chrome, safari, opra, ....</canvas>
+		</section>
     </div>
     <footer>
 		<a href="javascript:localStorage.removeItem('spotonTasks');window.location.reload();">clear localStorage</a>
