--- a/index.html
+++ b/index.html
@@ -41,36 +41,6 @@
     <div id="main" role="main">
 	<canvas id="canvas">Your browser sucks, please install a better one like chrome, safari, opra, ....</canvas>
 	<section id="taskList">
-		<ul>
-		        <li>
-		                <ul>
-		                        <li>task</li>
-		                        <li>task</li>
-		                        <li>task</li>
-		                </ul>
-		        </li>
-		        <li>
-		                <ul>
-		                        <li>task</li>
-		                        <li>task</li>
-		                        <li>task</li>
-		                </ul>
-		        </li>
-		        <li>
-		                <ul>
-		                        <li>task</li>
-		                        <li>task</li>
-		                        <li>task</li>
-		                </ul>
-		        </li>
-		        <li>
-		                <ul>
-		                        <li>task</li>
-		                        <li>task</li>
-		                        <li>task</li>
-		                </ul>
-		        </li>
-		</ul>
 	</section>
 	<section id="sideBar">
 			
@@ -103,10 +73,10 @@
 				</header>
 			   <H1>Movement (in taskSpot)</H1>
 			   <ul>
-			   		<li><code>&uarr;</code>go up one level</li>
-			   		<li><code>&darr;</code>go down one level</li>
-			   		<li><code>&larr;</code>turn counterclockwize</li>
-			   		<li><code>&rarr;</code>turn clockwize</li>
+			   		<li><code>&larr;</code>go up one level</li>
+			   		<li><code>&rarr;</code>go down one level</li>
+			   		<li><code>&uarr;</code>turn counterclockwize</li>
+			   		<li><code>&darr;</code>turn clockwize</li>
 			   		<li><code>n</code>change the task name</li>
 			   		<li><code>s</code>change the task size</li>
 			   		<li><code>c</code>change the completionrate</li>
