--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 			   		<li><code>n</code>change the task name</li>
 			   		<li><code>s</code>change the task size</li>
 			   		<li><code>c</code>change the completionrate</li>
+			   		<li><code>d</code>mark/unmark as done</li>
 			   		<li><code>ins</code>add a neighbour task</li>
 			   		<li><code>shift+ins</code>add a cild task</li>
 			   		<li><code>Delete</code>delete current task</li>
