bugfix: edit name

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </header>
     <div id="main" role="main">
-	<canvas id="canvas">Your browser sucks, please install a better one like chrome, safari, opra, ....</canvas>
+	<canvas id="canvas">Your browser does not support canvas, please install a better one like chrome, safari, opera, ....</canvas>
 	<section id="taskList">
 	</section>
 	<section id="sideBar">
@@ -60,7 +60,7 @@
 				<input type="range" name="g" class="g"	min=0 max=100 value=50>
 				<input name="g" min="0" max="100" type="number" class="g" value="" size=3>
 				<br>
-				<span class="info">Change the porcentual completion</span>
+				<span class="info">Change the procentual completion</span>
 			</section>
 			<section>
 				<button id="addNeighbour">Add neighbour</button><button id="addChild">Add child</button>
@@ -94,6 +94,7 @@
     </div>
     <footer>
 		<a href="javascript:localStorage.removeItem('spotonTasks');window.location.reload();">clear localStorage</a>
+		&bull; a gar_onn production
 	</footer>
   </div> <!--! end of #container -->
 
