'size' -> 'inportance' + spell

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 			</section>
 		
 			<section>
-				<label for="s">Size</label>
+				<label for="s">Inportance</label>
 				<input type="range" name="s" class="s"	min=1 max=99 value=50>
 				<input name="s" min="1" max="99" type="number" class="s" value="" size=3>
 				<br>
-				<span class="info">Change the procentual size of the task compared to it's parernt</span>
+				<span class="info">Change the procentual size of the task compared to it's parent. </span>
 			</section>
 			<section>
 				<label for="g">Completed</label>
@@ -69,7 +69,7 @@
 		<section id="info">
 			   <label>keyboard shortcuts</label>
 		       <header>
-			   		You can use thene keyboard shortcuts to navrigate and edit with more ease
+			   		You can use these keyboard shortcuts to navrigate and edit with more ease.
 				</header>
 			   <H1>Movement (in taskSpot)</H1>
 			   <ul>
